<resources>
    <string name="app_name">Trending</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="selected">Selected</string>
    <string name="offline">Look\'s like we\'re offline</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_desc">Please check your internet connection</string>
    <string name="stars">stars</string>
    <string name="back">Back</string>
    <string name="avatar_description">Avatar Description</string>
</resources>