package com.orangeink.trending.feature_trending.presentation.util

object TestTags {

    const val LanguageNode = "language_node"
    const val SearchEditText = "search_edit_text"
}